--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lru-cache": "^6.0.0",
     "make-error": "^1.3.6",
     "object-hash": "^2.0.1",
-    "oidc-token-hash": "^5.0.0",
+    "oidc-token-hash": "https://github.com/mako34/oidc-token-hash",
     "p-any": "^3.0.0"
   },
   "devDependencies": {
