--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/got": "^9.6.9",
     "base64url": "^3.0.1",
     "got": "^9.6.0",
-    "jose": "^1.27.1",
+    "jose": "https://github.com/hellojoko/react-native-jose",
     "lru-cache": "^6.0.0",
     "make-error": "^1.3.6",
     "object-hash": "^2.0.1",
