--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@types/got": "^9.6.9",
     "base64url": "^3.0.1",
+    "got": "^9.6.0",
     "jose": "https://github.com/hellojoko/react-native-jose",
     "lru-cache": "^6.0.0",
     "make-error": "^1.3.6",
